Fix for scrollbars making the layout to jump in some cases

--- a/app/ui/ModalHost.scss
+++ b/app/ui/ModalHost.scss
@@ -6,7 +6,7 @@
   top: 0;
   right: 0;
   left: 0;
-  overflow: scroll;
+  overflow: auto;
   height: 100%;
   background-color: rgba(black, .4);
 
